# opencode-limits

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/opencode_limits/: __init__.py  auth.py  cache.py  cli.py  models.py  render.py  tmux.py
src/opencode_limits/providers/: __init__.py  codex.py  copilot.py
tests/: test_cache.py  test_cli.py  test_codex.py  test_copilot.py  test_tmux.py
